sockshop/manifests/07-ingress/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - jacob.jetstack-training-f.uk
      secretName: front-end-tls
  rules:
  - host: jacob.jetstack-training-f.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
